# gztarchiver

./: .env.example  .gitignore  README.md  config.yaml  config_example.yaml  danalyzer.py  dprocessor.py  dtracer.py  main.py  pyproject.toml  run_download.py  scan_pdf.py  scrapy.cfg  years.json
doc_inspector/: __init__.py
doc_inspector/LLM/: __init__.py  prompt_templates.py
doc_inspector/utils/: __init__.py  categorizing_utils.py  content_preprocessing_utils.py
doc_scraper/cmd/: parser.py
doc_scraper/crawler/: run_crawlers.py
doc_scraper/utils/: __init__.py  archive_folder_utils.py  archive_to_cloud_utils.py  db_utils.py  doc_metadata_utils.py
docs/: index.html  index.md
document_scraper/: scrapy.cfg
document_scraper/document_scraper/: __init__.py  items.py  settings.py
gazette_tracker/: items.py  middlewares.py  pipelines.py  settings.py
gazette_tracker/processor/: __init__.py  distribute_processor.py  gazette_processor.py
gazette_tracker/spiders/: __init__.py  gazette_download.py  gazette_years.py
gztarchiver/: main.py
meta_data/: years.json
src/analyzer/: __init__.py  analyzer.py  classifier.py
src/cli/: __init__.py  argument_parser.py  command_handler.py
src/cmd/: validator.py
src/config/: __init__.py  config_loader.py
src/data/: __init__.py  years_manager.py
src/download/: __init__.py  download_manager.py
src/utils/: __init__.py  archive_folder_utils.py  archive_to_cloud_utils.py  cloud_credential_utils.py  data_checker.py  date_utils.py  doc_metadata_utils.py  (+3 more)
tests/: test-classifier.py  test-files-and-pdf.py
(+23 files in other folders)
